fixed map overflow with text

--- a/src/components/MessageCard/MessageCard.module.scss
+++ b/src/components/MessageCard/MessageCard.module.scss
@@ -9,6 +9,7 @@
       cursor: pointer;
     }
     .avatar {
+       flex: 0 0 50px;
        overflow: hidden;
        border-radius: 50%;
        margin-right: 10px;
@@ -59,15 +60,24 @@
           height: 25px;
           align-items: center;
           padding: 8px;
-          width: 100%;
           border-radius: 5px;
-
+          
+          //! ту троеточие не работает потом попробовать еще
+          width: 400px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
 
           //!непрочитанное сообщение
           //*потом вынесу в отдельный класс
           background-color: rgba(174, 183, 194, 0.12);
-          
-
+        }
+        p{
+          padding: 8px 0px;
+          width: 433px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
     }
